load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)

package(
    default_visibility = [":__subpackages__"],
)

drake_cc_binary(
    name = "single_traj_test",
    srcs = ["single_traj_test.cc",],
    deps = [
        "@lcm",
        "@gflags",
        "@jsoncpp",
        "//common:find_resource",
        "//manipulation/planner:constraint_relaxing_ik",
        "//math:geometric_transform",
        "//traj_gen:admm_runner",
        "//traj_gen:ddp_runner",
        "//traj_gen:config",
        "//lcmtypes:manipulator_traj",
        "//lcmtypes:motion_plan_query",
    ],
)